feat: add bonus version B to the game
